@@ -1,0 +1,1 @@
+{"type":"patchset-created","change":{"project":"openstack/nova","branch":"master","topic":"bug/993663","id":"I2060d39cbdabd20f410ebd501160a04c51641755","number":"7139","subject":"Create a utf8 version of the dns_domains table.","owner":{"name":"Dan Prince","email":"dprince@redhat.com","username":"dan-prince"},"url":"https://review.openstack.org/7139"},"patchSet":{"number":"5","revision":"f0c5b60445e4dc9f500c49332878b115362f0c83","ref":"refs/changes/39/7139/5","uploader":{"name":"Dan Prince","email":"dprince@redhat.com","username":"dan-prince"},"createdOn":1336495406},"uploader":{"name":"Dan Prince","email":"dprince@redhat.com","username":"dan-prince"}}
